Fixed url gallery and contact me text alignment

--- a/css/app.css
+++ b/css/app.css
@@ -7443,7 +7443,6 @@ th.hide-for-touch {
     color: #ffffff;
     position: relative;
     bottom: 14px;
-    left: 9px;
     font-size: 1em;
 }
 
